kubernetes/deployment-api-marker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-marker
  namespace: projet-extraction-tableaux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-marker
  template:
    metadata:
      labels:
        app: api-marker
    spec:
      containers:
        - name: api-marker
          image: inseefrlab/extraction-comptes-sociaux-llm:api_marker-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
