kubernetes/service-api-centrale.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-centrale
  namespace: projet-extraction-tableaux
spec:
  selector:
    app: api-centrale
  ports:
    - port: 80
      targetPort: 8000
