kubernetes/service-api-marker.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-marker
  namespace: projet-extraction-tableaux
spec:
  selector:
    app: api-marker
  ports:
    - port: 80
      targetPort: 8001
