kubernetes/service-marker-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: marker-proxy
  namespace: projet-extraction-tableaux
spec:
  selector:
    app: marker-proxy
  ports:
    - port: 80
      targetPort: 1324
