kubernetes/ingress-api-centrale.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-centrale
  namespace: projet-extraction-tableaux
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout:    "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout:    "600"
spec:
  rules:
    - host: extraction-tableau-centrale.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-centrale
                port:
                  number: 80
