kubernetes/ingress-extraction-tableau.yaml
# ingress-extraction-tableau.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extraction-tableau
  namespace: projet-extraction-tableaux
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Add CORS headers if needed
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  rules:
    - host: extraction-tableau.lab.sspcloud.fr
      http:
        paths:
          - path: /centrale(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-centrale
                port:
                  number: 80
          - path: /marker(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-marker
                port:
                  number: 80
          - path: /proxy(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: marker-proxy
                port:
                  number: 80
